--- a/src/AdventureWorks/AdventureWorks/AdventureWorks.csproj
+++ b/src/AdventureWorks/AdventureWorks/AdventureWorks.csproj
@@ -238,6 +238,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\mi-frontend-webapp - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\d3\barChart.js" />
     <Content Include="Scripts\d3\d3.v4.min.js" />
@@ -272,7 +273,6 @@
     <Content Include="Views\SalesOrders\SalesOrderDetails.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
     <Content Include="Views\Customer\Details.cshtml" />
-    <Content Include="Views\SalesOrders\View.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
