--- a/src/AdventureWorks/AdventureWorks/Web.config
+++ b/src/AdventureWorks/AdventureWorks/Web.config
@@ -12,9 +12,10 @@
   </appSettings>
   <connectionStrings>
     <add name="AdventureWorks"
-      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=AdventureWorks2014;Integrated Security=True"/>
-  </connectionStrings>
+     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=AdventureWorks2014;Integrated Security=True"/>
+   </connectionStrings>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
